--- a/Lectures/L3_data_visualization/L3_data_visualization_p2.html
+++ b/Lectures/L3_data_visualization/L3_data_visualization_p2.html
@@ -641,12 +641,9 @@ ggplot(loans, aes(x = homeownership, fill = grade)) +
 Which bar plot is a more useful representation for visualizing the relationship between homeownership and grade?
 ]
 
-.pull-left[
-&lt;img src="L3_data_visualization_p2_files/figure-html/unnamed-chunk-30-1.png" width="100%" style="display: block; margin: auto;" /&gt;
-]
-.pull-right[
-&lt;img src="L3_data_visualization_p2_files/figure-html/unnamed-chunk-31-1.png" width="100%" style="display: block; margin: auto;" /&gt;
-]
+
+&lt;img src="L3_data_visualization_p2_files/figure-html/unnamed-chunk-30-1.png" width="70%" height="30%" style="display: block; margin: auto;" /&gt;
+
 
 ---
 
@@ -654,7 +651,7 @@ Which bar plot is a more useful representation for visualizing the relationship 
 
 .panelset[
 .panel[.panel-name[Plot]
-&lt;img src="L3_data_visualization_p2_files/figure-html/unnamed-chunk-32-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L3_data_visualization_p2_files/figure-html/unnamed-chunk-31-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 .panel[.panel-name[Code]
 
@@ -696,9 +693,27 @@ ggplot(loans, aes(x = homeownership, y = loan_amount)) +
   geom_violin()
 ```
 
-&lt;img src="L3_data_visualization_p2_files/figure-html/unnamed-chunk-33-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L3_data_visualization_p2_files/figure-html/unnamed-chunk-32-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 
 ---
+
+## Violin plots... *with data*
+
+
+```r
+ggplot(loans, aes(x = homeownership, y = loan_amount)) +
+  geom_violin() + 
+* geom_jitter(alpha=0.15,height = 0.2,width = 0.2) +
+* theme_bw()
+```
+
+&lt;img src="L3_data_visualization_p2_files/figure-html/unnamed-chunk-33-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+
+
+
+---
+
+
 
 ## Ridge plots
 
@@ -712,6 +727,77 @@ ggplot(loans, aes(x = loan_amount, y = grade, fill = grade, color = grade)) +
 &lt;img src="L3_data_visualization_p2_files/figure-html/unnamed-chunk-34-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 
 ---
+
+class: middle
+
+# Viewing, storing, and saving plots
+
+
+---
+
+## Viewing immediately
+
+Printing my plot within the RMarkdown document or to the console:
+
+
+```r
+# call ggplot() without storing it into a data structure
+ggplot(loans, aes(x = homeownership, y = loan_amount)) +
+  geom_violin()
+```
+
+&lt;img src="L3_data_visualization_p2_files/figure-html/unnamed-chunk-35-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+
+---
+
+## Saving my plot to a data structure, then viewing
+
+First we create the plot, but we store it without viewing
+
+```r
+# call ggplot() without storing it into a data structure
+my_plot &lt;- ggplot(loans, aes(x = homeownership, y = loan_amount)) +
+  geom_violin()
+```
+
+--
+
+Then we can view the plot
+
+```r
+my_plot
+```
+
+&lt;img src="L3_data_visualization_p2_files/figure-html/unnamed-chunk-37-1.png" width="40%" style="display: block; margin: auto;" /&gt;
+
+
+---
+
+Or even add more to the plot
+
+
+```r
+my_plot + 
+  labs(y= "Loan amount" ) + 
+  theme_classic()
+```
+
+&lt;img src="L3_data_visualization_p2_files/figure-html/unnamed-chunk-38-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+
+---
+
+## Saving a plot
+
+Once a plot is stored in memory (in a data structure), we can save it!
+
+
+```r
+ggsave(filename = "figures/my_plot.png",plot = my_plot, height = 5,width = 5)
+```
+
+
+---
+
 
 # Attributions
 
