--- a/Lectures/L4_transforming_data/L4_data_transform.html
+++ b/Lectures/L4_transforming_data/L4_data_transform.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Tidy data</title>
+    <title>Transforming data</title>
     <meta charset="utf-8" />
     <meta name="author" content="Vincent L. Cannataro, Ph.D." />
     <script src="libs/header-attrs/header-attrs.js"></script>
@@ -16,7 +16,7 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Tidy data
+# Transforming data
 ## <br><br> IDDS 2201: Data Analytics
 ### Vincent L. Cannataro, Ph.D.
 
