--- a/Lectures/L0_useful_R_tips/L0_useful_R_tips.html
+++ b/Lectures/L0_useful_R_tips/L0_useful_R_tips.html
@@ -153,6 +153,7 @@ ggplot(data = starwars, aes(y=BMI, x = height)) +
 &lt;img src="L0_useful_R_tips_files/figure-html/unnamed-chunk-10-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 
 ---
+
 **We never stored the work in our environment.**
 
 Two possible solutions: 
@@ -733,6 +734,16 @@ my_data_frame %&gt;%
 
 
 ---
+
+# In-line code vs. chunks
+
+&lt;img src="img/Rstudio_code_inline.png" width="90%" style="display: block; margin: auto;" /&gt;
+
+
+---
+
+
+
 
 # P.S. 
 
