--- a/Lectures/L7_effective_data_viz/L7_effective_data_visualization.html
+++ b/Lectures/L7_effective_data_viz/L7_effective_data_visualization.html
@@ -46,6 +46,45 @@ class: middle
 
 ---
 
+## What is this visualization saying?
+
+&lt;img src="img/pie-compare_clean.png" width="130%" style="display: block; margin: auto;" /&gt;
+
+
+Adapted from [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/visualizing-proportions.html#a-case-for-pie-charts) by Claus O. Wilke. 
+
+---
+
+
+## What is this visualization saying?
+
+Is this better?
+
+&lt;img src="img/stacked-bar_clean.png" width="55%" style="display: block; margin: auto;" /&gt;
+
+
+Adapted from [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/visualizing-proportions.html#a-case-for-pie-charts) by Claus O. Wilke. 
+
+--
+
+.question[Can we do better still?]
+
+
+
+---
+
+
+## Keep it simple
+
+Do not make your reader work to understand or figure out meaning.
+
+&lt;img src="img/side-by-side-bar.png" width="55%" style="display: block; margin: auto;" /&gt;
+
+Adapted from [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/visualizing-proportions.html#a-case-for-pie-charts) by Claus O. Wilke. 
+
+
+---
+
 ## Keep it simple
 
 .pull-left-narrow[
@@ -62,10 +101,10 @@ class: middle
 ## Use	color	to	draw	attention
 
 .pull-left[
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-2-1.png" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-5-1.png" width="100%" style="display: block; margin: auto;" /&gt;
 ]
 .pull-right[
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-3-1.png" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-6-1.png" width="100%" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
@@ -111,7 +150,7 @@ In September 2019, YouGov survey asked 1,639 GB adults the following question:
 .pull-right[
 
 
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-6-1.png" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-9-1.png" width="100%" style="display: block; margin: auto;" /&gt;
 ]
 
 .footnote[ 
@@ -131,7 +170,7 @@ class: middle
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-7-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-10-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -151,7 +190,7 @@ ggplot(brexit, aes(x = opinion)) +
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-8-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-11-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -174,7 +213,7 @@ ggplot(brexit, aes(x = opinion)) +
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-9-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-12-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -199,7 +238,7 @@ ggplot(brexit, aes(x = opinion)) +
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-10-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-13-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -236,7 +275,7 @@ brexit &lt;- brexit %&gt;%
 ]
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-11-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-14-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 
 ]
@@ -283,7 +322,7 @@ class: middle
 
 ## Long categories can be hard to read
 
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-12-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-15-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -292,7 +331,7 @@ class: middle
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-13-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-16-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -313,7 +352,7 @@ class: middle
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-14-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-17-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -336,7 +375,7 @@ class: middle
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-15-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-18-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -367,7 +406,7 @@ class: middle
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-16-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-19-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -388,7 +427,7 @@ class: middle
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-17-1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-20-1.png" width="90%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -407,7 +446,7 @@ ggplot(brexit, aes(y = opinion, fill = region)) +
 
 ## Avoid redundancy?
 
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-18-1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-21-1.png" width="90%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -416,7 +455,7 @@ ggplot(brexit, aes(y = opinion, fill = region)) +
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-19-1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-22-1.png" width="90%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -438,7 +477,7 @@ ggplot(brexit, aes(y = opinion, fill = opinion)) +
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-20-1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-23-1.png" width="90%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -461,7 +500,7 @@ ggplot(brexit, aes(y = opinion, fill = opinion)) +
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-21-1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-24-1.png" width="90%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -488,7 +527,7 @@ ggplot(brexit, aes(y = opinion, fill = opinion)) +
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-22-1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-25-1.png" width="90%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -517,7 +556,7 @@ ggplot(brexit, aes(y = opinion, fill = opinion)) +
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-23-1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-26-1.png" width="90%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -546,7 +585,7 @@ ggplot(brexit, aes(y = opinion, fill = opinion)) +
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-24-1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-27-1.png" width="90%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -581,7 +620,7 @@ class: middle
 
 ## Rainbow colors not always the right choice
 
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-25-1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-28-1.png" width="90%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -590,7 +629,7 @@ class: middle
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-26-1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-29-1.png" width="90%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -651,7 +690,7 @@ ggplot(brexit, aes(y = opinion, fill = opinion)) +
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-30-1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-33-1.png" width="90%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -683,7 +722,7 @@ ggplot(brexit, aes(y = opinion, fill = opinion)) +
 .panelset[
 
 .panel[.panel-name[Plot]
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-31-1.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-34-1.png" width="90%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Code]
@@ -744,7 +783,7 @@ boston_airbnb %&gt;%
 * theme(axis.text.x = element_text(angle = 90))
 ```
 
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-32-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-35-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
@@ -764,7 +803,7 @@ boston_airbnb %&gt;%
 *                                  hjust = 1))
 ```
 
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-33-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-36-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 
 
@@ -786,7 +825,7 @@ boston_airbnb %&gt;%
 *                                  vjust = 0.5))
 ```
 
-&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-34-1.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="L7_effective_data_visualization_files/figure-html/unnamed-chunk-37-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 
 
