--- a/Lectures/README.html
+++ b/Lectures/README.html
@@ -185,6 +185,7 @@ pre code {
 <p><a href="https://vcannataro.github.io/IDDS_2201_public/code_along/code_along_COVID19/code_along_COVID19_final_code.html">Code-along COVID19 exercise</a></p>
 <ul>
 <li><a href="https://vcannataro.github.io/IDDS_2201_public/Lectures/L9_web_scraping/L9_web_scraping_examples_and_considerations.html#1">Lecture 9, Web scraping, examples, and considerations</a></li>
+<li><a href="https://vcannataro.github.io/IDDS_2201_public/Lectures/L10_functions_and_iteration/L10_functions_and_iteration.html#1">Lecture 10, Functions and iteration, with some more web scraping examples</a></li>
 </ul>
 </div>
 <div id="attributions" class="section level1">
