--- a/Lectures/README.html
+++ b/Lectures/README.html
@@ -187,7 +187,15 @@ pre code {
 <li><a href="https://vcannataro.github.io/IDDS_2201_public/Lectures/L9_web_scraping/L9_web_scraping_examples_and_considerations.html#1">Lecture 9, Web scraping, examples, and considerations</a></li>
 <li><a href="https://vcannataro.github.io/IDDS_2201_public/Lectures/L10_functions_and_iteration/L10_functions_and_iteration.html#1">Lecture 10, Functions and iteration, with some more web scraping examples</a></li>
 <li><a href="https://vcannataro.github.io/IDDS_2201_public/Lectures/L11_Data_science_ethics/L11_data_science_ethics.html#1">Lecture 11, Data science ethics</a></li>
-<li><a href="https://vcannataro.github.io/IDDS_2201_public/Lectures/L12_modeling_p1/L12_modeling_part_1.html">Lecture 12, Modeling part 1: The language of models, fitting and interpreting models, and linear models</a></li>
+<li><a href="https://vcannataro.github.io/IDDS_2201_public/Lectures/L12_modeling_p1/L12_modeling_part_1.html#1">Lecture 12, Modeling part 1: The language of models, fitting and interpreting models, and linear models</a></li>
+</ul>
+<p><a href="https://vcannataro.github.io/IDDS_2201_public/code_along/code_along_Boston_bluebikes/Boston_bike_rides_vs_weather_code-along.html">Code-along Boston BlueBikes vs weather exercise</a></p>
+<ul>
+<li><a href="https://vcannataro.github.io/IDDS_2201_public/Lectures/L13_modeling_p2/L13_modeling_p2.html#1">Lecture 13, Modeling part 2: Model checking and linear models with multiple predictors</a></li>
+</ul>
+<p><a href="https://vcannataro.github.io/IDDS_2201_public/code_along/code_along_space_and_time_and_maps/space_and_time_code_along.html">Code-along visualizing data in space and time using maps</a></p>
+<ul>
+<li><a href="https://vcannataro.github.io/IDDS_2201_public/Lectures/L14_modeling_p3/L14_modeling_p3_more_predictors_and_logistic_regression.html">Lecture 14, Modeling part 3: Multiple predictors again, logistic regression</a></li>
 </ul>
 </div>
 <div id="attributions" class="section level1">
